--- a/OPrime-Android/project.properties
+++ b/OPrime-Android/project.properties
@@ -14,3 +14,4 @@
 target=android-20
 android.library=false
 android.library.reference.1=../../book-animation/library
+android.library.reference.2=../../AndroidFieldDB
