--- a/OPrime-Android/AndroidManifest.xml
+++ b/OPrime-Android/AndroidManifest.xml
@@ -6,7 +6,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="20" />
 
     <supports-screens
@@ -31,7 +31,22 @@
     -->
 
     <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.wifi"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.gps"
+        android:required="false" />
+    <uses-feature
         android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
         android:required="false" />
 
     <application
@@ -74,9 +89,13 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.github.opensourcefieldlinguistics.fielddb.experimentation.ui.StoryBookSubExperiment"
-            android:exported="false"
+            android:name="com.github.opensourcefieldlinguistics.fielddb.storybook.ui.StoryBookSubExperiment"
             android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="ca.ilanguage.oprime.intent.action.START_STORY_BOOK_SUB_EXPERIMENT" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name="com.github.opensourcefieldlinguistics.javascript.HTML5GameActivity"
@@ -118,7 +137,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
