--- a/OPrime-Android-Tutorial/AndroidManifest.xml
+++ b/OPrime-Android-Tutorial/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:required="false" />
 
     <application
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_oprime"
         android:label="@string/app_name"
         android:largeHeap="true" >
         <activity
@@ -41,15 +41,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name="ca.ilanguage.oprime.preferences.SetPreferencesActivity"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
-            android:name="ca.ilanguage.oprime.storybook.StoryBookSubExperiment"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
     </application>
 
