--- a/OPrime-Android-Tutorial/AndroidManifest.xml
+++ b/OPrime-Android-Tutorial/AndroidManifest.xml
@@ -32,15 +32,22 @@
     <application
         android:icon="@drawable/ic_oprime"
         android:label="@string/app_name"
-        android:largeHeap="true" >
+        android:largeHeap="true"
+        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
         <activity
             android:name="ca.ilanguage.oprime.tutorial.OPrimeStorybookExperimentTutorial"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.github.opensourcefieldlinguistics.fielddb.storybook.ui.StoryBookSubExperiment"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
