--- a/OPrime-Android-Tutorial/AndroidManifest.xml
+++ b/OPrime-Android-Tutorial/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:required="false" />
 
     <application
-        android:icon="@drawable/ic_oprime"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
