--- a/OPrime-Android-Tutorial/AndroidManifest.xml
+++ b/OPrime-Android-Tutorial/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.ilanguage.oprime.tutorial"
+    package="ca.ilanguage.oprime.jeudeverbs"
     android:installLocation="preferExternal"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.1" >
 
     <uses-sdk
         android:minSdkVersion="8"
